--- a/src/Items.form
+++ b/src/Items.form
@@ -438,6 +438,9 @@
           <SubComponents>
             <Component class="javax.swing.JTextArea" name="txtspecification">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="66" green="0" red="66" type="rgb"/>
+                </Property>
                 <Property name="columns" type="int" value="20"/>
                 <Property name="rows" type="int" value="5"/>
               </Properties>
